# termlint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: termlint_ci.yaml
docs/: ARCHITECTURE.md  samples_reference.md
reports/: extraction.json  glossary_generated.json  glossary_merge_conflict_details.json  glossary_merge_conflict_summary.json  glossary_merge_summary.json  glossary_merged.json  glossary_merged_conflict.json  glossary_updates_conflict.json  ontology_update.json  quality_gate.json  verification.json
samples/: USAGE.md  generate_ontology.toml
samples/reports/ml/: ontology_update.json  quality_gate.json  verification.json
samples/reports/ml/glossary/: glossary_generated.json
samples/texts/: mdicine.txt  ml.ru.txt  python_pep2_modules_procedure.txt
src/termlint/core/: models.py  types.py
src/termlint/extraction/: protocols.py
src/termlint/extraction/stages/: base.py  normalization.py  parallel.py
termlint/: cli.py  config.py  constants.py  main.py  pipeline.py
termlint/core/: models.py  stages.py  types.py
termlint/entity_building/: builders.py  protocols.py  selectors.py
termlint/entity_building/stages/: from_matches.py  from_text.py
termlint/extraction/: __init__.py  pipeline.py
termlint/extraction/extractors/: README.md  __init__.py  base.py  cvalue.py  rule.py
termlint/extraction/extractors/cvalue_support/: candidate_generators.py  config.py  scorer.py  tokenizer.py  types.py
termlint/extraction/stages/: __init__.py  base.py  filter.py  normalize.py  parallel.py  rank.py
termlint/glossary/: __init__.py  converter.py  io.py  merge.py  models.py  utils.py
termlint/merging/converters/: base.py  text_to_entity.py
termlint/merging/stages/: base.py  glossary_create.py  glossary_merge.py
termlint/reporter/: __init__.py
termlint/reporter/exporters/: base.py  json.py  markdown.py
termlint/reporter/stages/: base.py
termlint/utils/: __init__.py  logger.py  timeit.py  version.py
termlint/verifier/: __init__.py  factory.py  matcher.py
termlint/verifier/sources/: __init__.py  base.py  json_glossary.py
termlint/verifier/stages/: exact.py  fuzzy.py  verification.py
tests/: conftest.py  test_config_discovery.py
tests/config/: test_cli_ci_quality_gates.py  test_config_discovery.py  test_extraction_config.py  test_pipeline_output_dir.py
tests/core/: test_types_result.py  test_types_text_entity_stream.py
tests/entity_building/: test_selectors.py
tests/extraction/extractors/: test_base_extractor.py  test_configurable_extractor.py  test_cvalue_extractor.py
tests/extraction/extractors/cvalue/: test_cvalue_extractor.py  test_cvalue_generators.py  test_cvalue_scorer.py
tests/extraction/stages/: test_base_stage.py
tests/fixtures/: test_glossary.json
tests/glossary/: test_converter.py  test_merge.py
tests/reporter/: conftest.py
tests/reporter/exporters/: test_json_exporter.py
tests/reporter/stages/: test_base_reporter_stage.py
tests/utils/: test_cli_logging.py
tests/verifier/: conftest.py
tests/verifier/sources/: test_json_glossary.py
tests/verifier/stages/: test_verification_stage.py
