[tool.poetry]
name = "termlint"
version = "0.1.0"
description = "Terminology linter for a given subject area text"
authors = ["Dmitry Uraev, <uraev.dima@yandex.ru>"]
license = "MIT"
readme = "README.md"
keywords = ["nlp", "terminology", "linting", "ontology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing",
]
packages = [{ include = "termlint" }]


[tool.poetry.dependencies]
python = ">=3.12"
click = "^8.3.1"
pydantic = "^2.12.5"

spacy = { version = "^3.7.0", optional = true, python = ">=3.9,<3.13" }
sentence-transformers = { version = "^5.2.0", optional = true }

[tool.poetry.extras]
nlp = ["spacy", "sentence-transformers"]  # full NLP
rule = ["spacy"]                          # RuleExtractor
ml = ["sentence-transformers"]            # ML-based extraction
minimal = []                              # No dependencies

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^5.0"
pytest-asyncio = "^1.3.0"

# TODO: Add proper poetry scripts later
[tool.poetry.scripts]
termlint = "termlint.cli:termlint_cli"
termlint-models = "termlint.cli:install_models"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# TODO: Add proper configuration for RuleExtractor later
# [tool.termlint.extraction.extractors.rule]
# model = "ru_core_news_sm"
# patterns = [
#     [{"POS" = "NOUN"}, {"POS" = "NOUN"}],
#     [{"POS" = "ADJ"}, {"POS" = "NOUN"}]
# ]
# min_score = 0.3
