[project]
name = "termlint"
version = "0.1.0a3"
description = "Terminology linter for a given subject area text"
readme = "README.md"
license = "MIT"
authors = [ { name = "Dmitry Uraev", email = "uraev.dima@yandex.ru" } ]
keywords = ["nlp", "terminology", "linting", "ontology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing",
]
urls = { Homepage = "https://github.com/dmitry-uraev/termlint", Repository = "https://github.com/dmitry-uraev/termlint", Issues = "https://github.com/dmitry-uraev/termlint/issues", Changelog = "https://github.com/dmitry-uraev/termlint/blob/main/CHANGELOG.md" }
packages = [{ include = "termlint" }]

requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "rich>=13.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
base = [
    "spacy>=3.8.11,<4; python_version < '3.14'",
    "rapidfuzz>=3.14.3"
]
ml = [
    "sentence-transformers>=3.2.0"
]
minimal = []

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^5.0"
pytest-asyncio = "^1.3.0"
black = "^24.8.0"
ruff = "^0.7.0"

[project.scripts]
termlint = "termlint.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ════════════════════════════════════════════════════════════════════════════════
# TERMlint CONFIGURATION
# ════════════════════════════════════════════════════════════════════════════════

[tool.termlint]
output-dir = "reports/"
quality-gates = { min-coverage = 90.0, max-unknown = 5 }

[tool.termlint.extraction]
extractors = ["rule", "cvalue"]
rules = { model = "ru_core_news_sm", auto_download_model = false }
cvalue = { threshold = 0.25, min_freq = 1, min_length = 2, max_length = 4, use_ling_filter = true, model = "ru_core_news_sm", auto_download_model = false }

[tool.termlint.verifier]
type = "fuzzy"
fuzzy-params = { threshold = 85, limit = 3, scorer = "token_sort_ratio" }

[tool.termlint.reports]
include = ["verification", "quality_gate", "ontology_update"]
exporters = ["json"]

[tool.termlint.pipeline]
stages = ["extract", "normalize", "verify", "report"]

[tool.termlint.logging]
level = "WARNING"
# log-file = "reports/termlint.log"
fmt = "%(asctime)s [%(name)s] %(levelname)-8s %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"
max_bytes = 10485760
backup_count = 5
